--- a/Javascript Programs/prg1b.html
+++ b/Javascript Programs/prg1b.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+        var num1=prompt("enter the first number:");
+        var num2=prompt("enter the second number:");
+        var res=num1+num2;
+        if(res%2==0)
         {
-            document.write(" Number is even!!");
+            document.write("Sum is even !!");
         }
         else{
-            document.write("Number is odd !!");
+            document.write("Sum is odd !!");
+
         }
     </script>
 </body>
