--- a/Javascript Programs/prg2a.html
+++ b/Javascript Programs/prg2a.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+        for(i=1;i<=100;i++)
         {
-            document.write(" Number is even!!");
-        }
-        else{
-            document.write("Number is odd !!");
+
+            document.write(i+" ");
         }
     </script>
 </body>
