--- a/Javascript Programs/prg2b.html
+++ b/Javascript Programs/prg2b.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+        for(i=0;i<=100;i++)
         {
-            document.write(" Number is even!!");
-        }
-        else{
-            document.write("Number is odd !!");
+            if(i%2!=0)
+            { 
+            document.write(i+" ");
+            }
+            
+            
         }
     </script>
 </body>
