--- a/Javascript Programs/prg2d.html
+++ b/Javascript Programs/prg2d.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+        for(i=100;i>=0;i--)
         {
-            document.write(" Number is even!!");
+
+            document.write(i+" ");
         }
-        else{
-            document.write("Number is odd !!");
-        }
-    </script>
+    </script>   
 </body>
 </html>
