--- a/Javascript Programs/prg2e.html
+++ b/Javascript Programs/prg2e.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+        for(i=100;i>=0;i--)
         {
-            document.write(" Number is even!!");
-        }
-        else{
-            document.write("Number is odd !!");
+
+
+
+                document.write(i+" ");
+                i=i-2;
+            
         }
     </script>
 </body>
