--- a/Javascript Programs/prg3.html
+++ b/Javascript Programs/prg3.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <script>
-        var num=prompt(" enter the number:");
-        if(num%2==0)
+   for(i=0;i<=10;i++)
         {
-            document.write(" Number is even!!");
-        }
-        else{
-            document.write("Number is odd !!");
+            for(j=1;j<=i;j++)
+            {
+                document.write(j+" ");
+            }
+            document.write("<br>");
         }
     </script>
 </body>
